[package]
name = "salmon_salad"
version = "0.1.0"
edition = "2021"
authors = ["arrynfr <arrynfrench@proton.me>"]
license = "BSD-2-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[features]
uefi = []

[dependencies]
