[package]
name = "salmon_salad"
version = "0.1.0"
edition = "2021"
authors = ["arrynfr <arrynfrench@proton.me>"]
license = "BSD-2-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[features]
uefi = []
qemu = []
apl  = []
rpi3 = []
rpi4 = []

[dependencies]

[target.'cfg(target_arch = "x86_64")'.dependencies]

[target.'cfg(target_arch = "aarch64")'.dependencies]
# fdt_parse = { git = "https://github.com/arrynfr/fdt_parse.git" }
fdt_parse = { path = "src/shared/fdt_parse"}

[target.'cfg(target_arch = "riscv64")'.dependencies]
# fdt_parse = { git = "https://github.com/arrynfr/fdt_parse.git" }
